feat: huge commit with lots of stuff that I should've commited a long time ago but now it's too late

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,9 @@
     "esModuleInterop": true,
     "allowJs": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  "include": ["src"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
