--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,8 +1,12 @@
 {
-  "type": "sqlite",
-  "database": "./src/database/database.sqlite",
-  "migrations": ["./src/database/migrations/**.ts"],
-  "entities": ["./src/models/**.ts"],
+  "type": "postgres",
+  "port": 5432,
+  "host": "localhost",
+  "username": "docker",
+  "password": "ignite",
+  "database": "rentalx",
+  "migrations": ["./src/database/migrations/*.ts"],
+  "entities": ["./src/entities/**.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations"
   }
