--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "test": "jest",
     "test:staged": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@types/bcrypt": "^3.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
@@ -26,14 +31,23 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "csv-parse": "^4.15.3",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.1.6",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
   }
