--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Lucas Sousa <frempyrean@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register node_modules/typeorm/cli.js",
     "test": "jest",
     "test:staged": "jest"
   },
@@ -33,6 +33,7 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
