--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,9 +5,9 @@
   "username": "docker",
   "password": "ignite",
   "database": "rentalx",
-  "migrations": ["./src/database/migrations/*.ts"],
-  "entities": ["./src/entities/**.ts"],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+  "entities": ["./src/**/entities/**.ts"],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
