--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
   "author": "Lucas Sousa <frempyrean@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register node_modules/typeorm/cli.js",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
     "test:staged": "jest",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
+    "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -40,14 +51,20 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.892.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
     "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
