--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,16 @@ jobs:
           key: ${{secrets.SSH_SECRET}}
           source: "., !node_modules"
           target: "~/app/ignite-rentalx"
+          
+      - name: Update API
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.SSH_HOST}}
+          username: ${{secrets.SSH_USER}}
+          port: ${{secrets.SSH_PORT}}
+          key: ${{secrets.SSH_SECRET}}
+          script: |
+            cd ~/app/api-rentx
+            yarn
+            ./node-modules/.bin/typeorm migration:run
+            pm2 restart rentalx-api
