--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,20 @@ services:
     volumes:
       - pgdata:/data/postgres
     network_mode: host
-  app:
-    build: .
-    container_name: rentalx-container
+
+  redis:
+    image: redis:alpine
     ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    network_mode: host
+      - 6379:6379
+
+  # app:
+  #   build: .
+  #   container_name: rentalx-container
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   network_mode: host
 
 volumes:
   pgdata:
