--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
     "@types/nodemailer": "^6.4.1",
+    "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -67,6 +68,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
