--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@sentry/node": "^6.3.5",
+    "@sentry/tracing": "^6.3.5",
     "aws-sdk": "^2.892.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
